oqct-app/main/default/objects/Related_Object__c/Related_Object__c.object-meta.xml
<CustomObject>
    <description>This object is used to specify all the child object&apos;s records that need to be masked/deleted when the parent object records get masked/deleted. For Example: If you&apos;re masking Account, then to mask it&apos;s related object i.e., contact, opportunity, cases; add their entry in this object</description>
    <label>DC-Related Object</label>
    <nameField>
        <displayFormat>RO - {000000000}</displayFormat>
        <label>Related Object Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DC-Related Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>