oqct-app/main/default/objects/Related_Object__c/fields/DC_Configuration__c.field-meta.xml
<CustomField>
    <fullName>DC_Configuration__c</fullName>
    <description>The DC-Configuration record which represents the Master object which is the parent of the Related Object</description>
    <inlineHelpText>The DC-Configuration record which represents the Master object which is the parent of the Related Object</inlineHelpText>
    <label>DC-Configuration</label>
    <referenceTo>DC_Configuration__c</referenceTo>
    <relationshipName>Related_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>