oqct-app/main/default/objects/Related_Object__c/fields/Related_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Name__c</fullName>
    <description>The name of the child object of the corresponding Master object which needs to be masked/deleted when Master object records are masked/deleted</description>
    <inlineHelpText>The name of the child object of the corresponding Master object which needs to be masked/deleted when Master object records are masked/deleted</inlineHelpText>
    <label>Related Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>